--- a/index.html
+++ b/index.html
@@ -1,13 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito+Sans" />
 </head>
+
 <body>
-    <!-- Type your code here -->
-    <footer class="footer">Made with <img src="/assets/prograd-heart.svg"> by ProGrad</footer>
+    <header> <img class="logo" src="/assets/Logo.JPG" alt="logo"></header>
+
+    <div>
+        <h1>ICC WORLD CUP 2011</h1>
+        <h3>India vs SriLanka ScoreCard</h3>
+    </div>
+    <br>
+
+    <div class="table_container">
+        <table>
+            <tr id=t1>
+                <th colspan="2" id="th1">India Innings</th>
+                <th colspan="7" id="th2">277-4(48.2)</th>
+
+            </tr>
+
+            <tr id="t2">
+                <td colspan="2">
+                    <p>Batsman</p>
+                </td>
+
+                <td>
+                    <p>R</p>
+                </td>
+                <td>
+                    <p>B</p>
+                </td>
+                <td>
+                    <p>4s</p>
+                </td>
+                <td>
+                    <p>6s</p>
+                </td>
+                <td>
+                    <p>SR</p>
+                </td>
+
+            </tr>
+
+            <tr id="t3">
+                <td>
+                    <p><a class="a" href="/assets/sehwag.png">Virender Sehwag</a> </p>
+                </td>
+
+                <td>
+                    <p>lbw b L Malinga</p>
+                </td>
+                <td>
+                    <p>0</p>
+                </td>
+                <td>
+                    <p>2</p>
+                </td>
+                <td>
+                    <p>0</p>
+                </td>
+                <td>
+                    <p>0</p>
+                </td>
+                <td>
+                    <p>0.00</p>
+                </td>
+            </tr>
+
+            <tr id="t4">
+                <td>
+                    <p><a class="a" href="/assets/Sachin.png"> Sachin Tendulkar</a></p>
+                </td>
+
+                <td>
+                    <p>c k Sangakkara b l Malinga</p>
+                </td>
+                <td>
+                    <p>18</p>
+                </td>
+                <td>
+                    <p>14</p>
+                </td>
+                <td>
+                    <p>2</p>
+                </td>
+                <td>
+                    <p>0</p>
+                </td>
+                <td>
+                    <p>128.57</p>
+                </td>
+            </tr>
+
+            <tr id="t5">
+                <td>
+                    <p><a class="a" href="/assets/gautam.png">Gautam Gambhir</a> </p>
+                </td>
+
+                <td>
+                    <p>b T Perera</p>
+                </td>
+                <td>
+                    <p>97</p>
+                </td>
+                <td>
+                    <p>122</p>
+                </td>
+                <td>
+                    <p>9</p>
+                </td>
+                <td>
+                    <p>0</p>
+                </td>
+                <td>
+                    <p>79.51</p>
+                </td>
+            </tr>
+
+            <tr id="t6">
+                <td>
+                    <p><a class="a" href="/assets/Virat.png"> Virat Kohli</a></p>
+                </td>
+
+                <td>
+                    <p>c & b T Dilshan</p>
+                </td>
+                <td>
+                    <p>35</p>
+                </td>
+                <td>
+                    <p>49</p>
+                </td>
+                <td>
+                    <p>4</p>
+                </td>
+                <td>
+                    <p>0</p>
+                </td>
+                <td>
+                    <p>71.43</p>
+                </td>
+            </tr>
+
+            <tr id="t7">
+                <td>
+                    <p><a class="a" href="/assets/Dhoni.png"> MS Dhoni (c & wk)</a></p>
+                </td>
+
+                <td>
+                    <p>not out</p>
+                </td>
+                <td>
+                    <p>91</p>
+                </td>
+                <td>
+                    <p>79</p>
+                </td>
+                <td>
+                    <p>8</p>
+                </td>
+                <td>
+                    <p>2</p>
+                </td>
+                <td>
+                    <p>115.19</p>
+                </td>
+            </tr>
+
+            <tr id="t8">
+                <td>
+                    <p><a class="a" href="/assets/Yuvi.png"> Yuvraj Singh</a></p>
+                </td>
+
+                <td>
+                    <p>not out</p>
+                </td>
+                <td>
+                    <p>21</p>
+                </td>
+                <td>
+                    <p>24</p>
+                </td>
+                <td>
+                    <p>2</p>
+                </td>
+                <td>
+                    <p>0</p>
+                </td>
+                <td>
+                    <p>87.50</p>
+                </td>
+            </tr>
+
+            <tr id="t9">
+                <td colspan="2">Extras</td>
+                <td colspan="4">15(b 1,lb 6, w 8, nb 0, p 0)</td>
+
+            </tr>
+
+
+            <tr id="t10">
+                <td colspan="2">Total</td>
+                <td colspan="4">277 (4 wkts, 48.2 ov)</td>
+            </tr>
+
+            <tr id=" t11">
+                <td>Did not bat</td>
+                <td colspan="7"><a class="a" href="/assets/Raina.jpg">Suresh Raina</a> , <a class="a"
+                        href="/assets/Harbhajan.jpg">
+                        Harbhajan
+                        Singh</a>, <a class="a" href="/assets/Zaheer.jpg">Zaheer Khan</a> , <a class="a"
+                        href="/assets/MunafPatel.jpg">
+                        Munaf
+                        Patel</a>, <a class="a" href="/assets/Sreesant.jpg"> S Sreesanth</a></td>
+            </tr>
+
+        </table>
+
+    </div>
+
+
+    <footer class="footer">Made with &nbsp; <img src="/assets/prograd-heart.svg"> &nbsp; by ProGrad</footer>
 </body>
+
 </html>
